testsuite/tests/typecheck/should_fail/ExplicitSpecificity5.stderr

ExplicitSpecificity5.hs:7:1: error:
    Inferred type variables are not allowed
    In an instance declaration
